JavaFx demo lcd

--- a/src/main/resources/rpiLcdKit.fxml
+++ b/src/main/resources/rpiLcdKit.fxml
@@ -14,14 +14,14 @@
             <Image url="@AdafruitLCD_Rpi_Kit.png" />
          </image>
       </ImageView>
-      <TextArea fx:id="lcdTA" editable="false" layoutX="78.0" layoutY="138.0" prefColumnCount="16" prefHeight="158.0" prefRowCount="2" prefWidth="632.0" style="text-area-background: blue;" stylesheets="@rpiLcdKit.css" wrapText="true">
+      <TextArea fx:id="lcdTA" editable="false" layoutX="78.0" layoutY="138.0" prefColumnCount="16" prefHeight="158.0" prefRowCount="2" prefWidth="632.0" style="text-area-background: snow;" stylesheets="@rpiLcdKit.css" wrapText="true">
          <font>
             <Font name="Arial" size="48.0" />
          </font></TextArea>
       <Button fx:id="selectButton" layoutX="467.0" layoutY="437.0" mnemonicParsing="false" onAction="#selectButtonAction" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="S" />
-      <Button fx:id="leftButton" layoutX="560.0" layoutY="437.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="L" />
-      <Button fx:id="upButton" layoutX="654.0" layoutY="408.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="U" />
-      <Button fx:id="downButton" layoutX="654.0" layoutY="467.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="D" />
-      <Button fx:id="rightButton" layoutX="741.0" layoutY="439.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="R" />
+      <Button fx:id="leftButton" layoutX="560.0" layoutY="437.0" mnemonicParsing="false" onAction="#leftButtonAction" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="L" />
+      <Button fx:id="upButton" layoutX="654.0" layoutY="408.0" mnemonicParsing="false" onAction="#upButtonAction" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="U" />
+      <Button fx:id="downButton" layoutX="654.0" layoutY="467.0" mnemonicParsing="false" onAction="#downButtonAction" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="D" />
+      <Button fx:id="rightButton" layoutX="741.0" layoutY="439.0" mnemonicParsing="false" onAction="#rightButtonAction" prefHeight="34.0" prefWidth="36.0" style="-fx-background-radius: 20em;" text="R" />
    </children>
 </Pane>
